# bscanner

./: .gitignore  CLAUDE.md  CMakeLists.txt  build-and-run-example.py  build.py  readme.md
example-programs/: echo6000.c  example1.c
src/: binary_analyzer.cpp  binary_analyzer.h  binary_format.h  cli_parser.cpp  cli_parser.h  elf_format.cpp  elf_format.h  io_tracker.cpp  io_tracker.h  libc_hooks.cpp  libc_hooks.h  main.cpp  network_monitor.cpp  network_monitor.h  network_monitor_windows.cpp  network_monitor_windows.h  network_wrapper.cpp  pe_format.cpp  pe_format.h  triton_engine.cpp  triton_engine.h
